// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field.isValid() sets error 1`] = `"This field is required."`;

exports[`field.makePristine() empties error 1`] = `"This field is required."`;

exports[`field.reset() empties error 1`] = `"This field is required."`;

exports[`field.setAndValidate() sets and validates field 1`] = `"This field is required."`;

exports[`field.setError() calls onError callback if exists 1`] = `
Array [
  "Nice error !!!",
  Field {
    "config": Object {
      "onError": [Function],
    },
    "currentValue": undefined,
    "defaultValue": undefined,
    "error": "Nice error !!!",
    "initialValue": undefined,
    "previousValue": undefined,
    "validator": [Function],
  },
]
`;

exports[`form.isValid calls onError callback 1`] = `
Array [
  Object {
    "confirmPassword": "This field is required.",
    "name": "This field is required.",
    "password": "This field is required.",
    "username": "This field is required.",
  },
  Form {
    "config": Object {
      "onError": [Function],
    },
    "confirmPassword": Field {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": "This field is required.",
      "fieldName": "confirmPassword",
      "initialValue": undefined,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": undefined,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
    "fieldNames": Array [
      "username",
      "name",
      "password",
      "confirmPassword",
    ],
    "getNotified": true,
    "name": Field {
      "config": Object {
        "modify": [Function],
      },
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": "This field is required.",
      "fieldName": "name",
      "initialValue": undefined,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": undefined,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
    "password": Field {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": "This field is required.",
      "fieldName": "password",
      "initialValue": undefined,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": undefined,
      "validator": Array [
        [Function],
      ],
    },
    "username": Field {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": "This field is required.",
      "fieldName": "username",
      "initialValue": undefined,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": undefined,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
  },
]
`;

exports[`form.isValid sets error 1`] = `
Object {
  "confirmPassword": "This field is required.",
  "name": "This field is required.",
  "password": "This field is required.",
  "username": "This field is required.",
}
`;

exports[`form.isValid won't set error if 'skipAttachError' true passed 1`] = `
Object {
  "confirmPassword": undefined,
  "name": undefined,
  "password": undefined,
  "username": undefined,
}
`;

exports[`form.makePristine empties all the error fields and calls onError callback only once 1`] = `
Object {
  "confirmPassword": "This field is required.",
  "name": "This field is required.",
  "password": "This field is required.",
  "username": undefined,
}
`;

exports[`form.makePristine empties all the error fields and calls onError callback only once 2`] = `
Object {
  "confirmPassword": undefined,
  "name": undefined,
  "password": undefined,
  "username": undefined,
}
`;

exports[`form.makePristine empties all the error fields and calls onError callback only once 3`] = `
Object {
  "confirmPassword": undefined,
  "name": undefined,
  "password": undefined,
  "username": "ausername",
}
`;

exports[`form.setError calls onError callback only once 1`] = `
Array [
  Object {
    "confirmPassword": undefined,
    "name": undefined,
    "password": "a error",
    "username": "a error",
  },
  Form {
    "config": Object {
      "onError": [Function],
    },
    "confirmPassword": Field {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "confirmPassword",
      "initialValue": undefined,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": undefined,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
    "fieldNames": Array [
      "username",
      "name",
      "password",
      "confirmPassword",
    ],
    "getNotified": true,
    "name": Field {
      "config": Object {
        "modify": [Function],
      },
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "name",
      "initialValue": undefined,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": undefined,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
    "password": Field {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": "a error",
      "fieldName": "password",
      "initialValue": undefined,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": undefined,
      "validator": Array [
        [Function],
      ],
    },
    "username": Field {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": "a error",
      "fieldName": "username",
      "initialValue": undefined,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": undefined,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
  },
]
`;

exports[`form.triggerOnChange calls callback with value and form instance 1`] = `
Array [
  Object {
    "confirmPassword": undefined,
    "name": undefined,
    "password": undefined,
    "username": "ausername",
  },
  Form {
    "config": Object {
      "onChange": [Function],
    },
    "confirmPassword": Field {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "confirmPassword",
      "initialValue": undefined,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": undefined,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
    "fieldNames": Array [
      "username",
      "name",
      "password",
      "confirmPassword",
    ],
    "getNotified": true,
    "name": Field {
      "config": Object {
        "modify": [Function],
      },
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "name",
      "initialValue": undefined,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": undefined,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
    "password": Field {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "password",
      "initialValue": undefined,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": undefined,
      "validator": Array [
        [Function],
      ],
    },
    "username": Field {
      "config": Object {},
      "currentValue": "ausername",
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "username",
      "initialValue": undefined,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": undefined,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
  },
]
`;

exports[`form.triggerOnError calls callback with value and form instance 1`] = `
Array [
  Object {
    "confirmPassword": undefined,
    "name": undefined,
    "password": undefined,
    "username": "an error",
  },
  Form {
    "config": Object {
      "onError": [Function],
    },
    "confirmPassword": Field {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "confirmPassword",
      "initialValue": undefined,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": undefined,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
    "fieldNames": Array [
      "username",
      "name",
      "password",
      "confirmPassword",
    ],
    "getNotified": true,
    "name": Field {
      "config": Object {
        "modify": [Function],
      },
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "name",
      "initialValue": undefined,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": undefined,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
    "password": Field {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "password",
      "initialValue": undefined,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": undefined,
      "validator": Array [
        [Function],
      ],
    },
    "username": Field {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": "an error",
      "fieldName": "username",
      "initialValue": undefined,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": undefined,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
  },
]
`;
